# ansible-role-miarec

./: .ansible-lint  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
defaults/: main.yml
docs/prs/: pr_006_migrate_to_uv.md  pr_007_postgresql_redis_molecule_tests.md
handlers/: main.yml
meta/: main.yml
molecule/: README.md
molecule/default/: README.md  converge.yml  molecule.yml  prepare.yml
molecule/default/tasks/: postgresql.yml  redis.yml
molecule/default/tests/: test_defaults.py
molecule/tls/: converge.yml  molecule.yml  prepare.yml
molecule/tls/tasks/: certificates.yml  postgresql_tls.yml  redis_tls.yml
molecule/tls/tests/: test_tls.py
tasks/: dependencies.yml  install.yml  main.yml  preflight.yml  sftpuser.yml
templates/: etc_init_miarec.conf.j2  etc_systemd_system_miarec.service.j2
vars/: CentOS-7.yml  CentOS.yml  Debian.yml  RedHat-7.yml  RedHat.yml  Ubuntu.yml
